[package]
name = "kvm"
version = "0.1.0"
authors = ["Dan Schatzberg <schatzberg.dan@gmail.com>"]
description = "Bindings for KVM interface"
homepage = "https://github.com/dschatzberg/kvm"
repository = "https://github.com/dschatzberg/kvm.git"
keywords = ["kvm", "virtualization"]
license = "Apache-2.0"

[dependencies]
errno = "0.1.4"
ioctl = "0.3.3"
libc = "0.2"
log = "0.3"
memmap = "0.2.1"
